--- a/app/src/main/res/layout/activity_list_main.xml
+++ b/app/src/main/res/layout/activity_list_main.xml
@@ -5,12 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainList.ListMain"
 android:orientation="vertical"
-android:background="#D3D7DD">
+android:background="#C62828">
     <androidx.recyclerview.widget.RecyclerView
             android:layout_marginLeft="12dp"
             android:id="@+id/main_list_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:text="TEXT"
+    android:textSize="56sp"/>
 </LinearLayout>
