--- a/app/src/main/res/layout/sura_details_item.xml
+++ b/app/src/main/res/layout/sura_details_item.xml
@@ -4,6 +4,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="@drawable/main_list_item_background"
 android:clickable="true">
 <RelativeLayout
         android:id="@+id/sura_details_item_context_menu_block"
@@ -25,10 +26,36 @@ android:padding="12dp">
    android:src="@drawable/favoriteicon"
   />
 </RelativeLayout>
-    <TextView
-            android:id="@+id/sura_details_item_aya_ukr"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+    >
+      <FrameLayout
+              android:id="@+id/sura_details_item_aya_figure"
+              android:layout_width="wrap_content" android:layout_height="wrap_content"
+      android:background="@drawable/figure"
+      android:layout_margin="6dp">
+
+          <TextView
+                  android:id="@+id/sura_details_item_aya_number"
+                  android:layout_width="wrap_content" android:layout_height="wrap_content"
+
+          android:text="130"
+          android:layout_gravity="center"
+                  android:padding="12dp"
+                  android:textSize="12sp"
+         />
+      </FrameLayout>
+        <TextView
+                android:id="@+id/sura_details_item_aya_ukr"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/sura_details_item_aya_figure"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="22dp"/>
+    </RelativeLayout>
+
     <TextView
             android:id="@+id/sura_details_item_aya_arabic"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:layout_marginTop="12dp"
+    android:layout_gravity="right"/>
 </LinearLayout>
