--- a/app/src/main/res/layout/sura_details_item.xml
+++ b/app/src/main/res/layout/sura_details_item.xml
@@ -26,6 +26,9 @@ android:padding="12dp">
    android:src="@drawable/favoriteicon"
   />
 </RelativeLayout>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:id="@+id/suraheader"
+    android:layout_marginLeft="30dp"/>
     <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:orientation="horizontal"
     >
