--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,8 @@
             android:text="Hello World!"
     />
     <com.google.android.material.navigation.NavigationView android:layout_width="match_parent"
-                                                           android:layout_height="match_parent"></com.google.android.material.navigation.NavigationView>
+                                                           android:layout_height="match_parent">
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
