--- a/app/src/main/res/layout/activity_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_nav_drawer.xml
@@ -8,12 +8,15 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
-
+<LinearLayout
+        android:id="@+id/fragmentzone"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+android:orientation="vertical">
     <include
             layout="@layout/app_bar_nav_drawer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
+</LinearLayout>
     <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
