--- a/app/src/main/res/menu/activity_nav_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_drawer.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
         <item
                 android:id="@+id/nav_home"
                 android:icon="@drawable/ic_menu_camera"
-                android:title="@string/menu_home"/>
+                android:title="@string/menu_home"
+        />
         <item
                 android:id="@+id/nav_gallery"
                 android:icon="@drawable/ic_menu_gallery"
@@ -19,7 +21,8 @@
         <item
                 android:id="@+id/nav_tools"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="@string/menu_tools"/>
+                android:title="@string/menu_tools"
+                app:itemBackground="@color/navDrawerColor"/>
     </group>
 
     <item android:title="Communicate">
