--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="navDrawerColor">#1e77c7</color>
+    <color name="listbackground">#f2f2f2</color>
 </resources>
