--- a/app/src/main/res/layout/activity_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_nav_drawer.xml
@@ -37,91 +37,144 @@
             android:layout_marginBottom="15dp"/>
             </FrameLayout>
 
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="horizontal"
+            <LinearLayout
+                    android:id="@+id/quranItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-                          android:layout_margin="6dp">
-                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                           android:src="@drawable/quraicon"
-                           android:layout_gravity="center"
-                           android:padding="12dp"
-                />
-                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:text="Коран"
-                          android:textAlignment="viewStart"
-                          android:background="@drawable/nadrawer_menu_tem_title_background" android:padding="8dp"
-                          android:textSize="18sp"
-                          android:layout_marginLeft="5dp"/>
+                    android:layout_margin="6dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="12dp"
+                        android:src="@drawable/quraicon" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:background="@drawable/nadrawer_menu_tem_title_background"
+                        android:padding="8dp"
+                        android:text="Коран"
+                        android:textAlignment="viewStart"
+                        android:textSize="18sp" />
             </LinearLayout>
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="horizontal"
 
-                          android:layout_margin="6dp">
-                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                           android:src="@drawable/ululeni"
-                           android:layout_gravity="center"
-                           android:padding="12dp"
-                />
-                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:text="Улюбленi"
-                          android:textSize="18sp" android:textAlignment="viewStart"
-                          android:background="@drawable/nadrawer_menu_tem_title_background" android:padding="8dp"
-                          android:layout_marginLeft="15dp"/>
+            <LinearLayout
+                    android:id="@+id/lovedItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_margin="6dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="12dp"
+                        android:src="@drawable/ululeni" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/nadrawer_menu_tem_title_background"
+                        android:padding="8dp"
+                        android:text="Улюбленi"
+                        android:textAlignment="viewStart"
+                        android:textSize="18sp" />
             </LinearLayout>
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="horizontal"
 
-            android:layout_margin="6dp">
-                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                           android:src="@drawable/navdrawerbookmark"
-                           android:layout_gravity="center"
-                           android:padding="12dp"
-                           />
-                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:text="Закладки"
-                          android:textAlignment="viewStart"
-                          android:background="@drawable/nadrawer_menu_tem_title_background" android:padding="8dp"
-                          android:textSize="18sp" android:layout_marginLeft="15dp"/>
+            <LinearLayout
+                    android:id="@+id/bookmarksItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_margin="6dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="12dp"
+                        android:src="@drawable/navdrawerbookmark" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/nadrawer_menu_tem_title_background"
+                        android:padding="8dp"
+                        android:text="Закладки"
+                        android:textAlignment="viewStart"
+                        android:textSize="18sp" />
             </LinearLayout>
 <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
 android:text="Налаштування"
 android:layout_margin="15dp"
 android:textSize="18sp"/>
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="horizontal"
 
-                          android:layout_margin="6dp">
-                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                           android:src="@drawable/paint_palette"
-                           android:layout_gravity="center|center_vertical"
+            <LinearLayout
+                    android:id="@+id/settingsItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-                           android:padding="12dp"
-                />
-                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:text="Вигляд"
-                          android:textAlignment="viewStart"
-                          android:background="@drawable/nadrawer_menu_tem_title_background" android:padding="8dp"
-                          android:textSize="18sp" android:layout_marginLeft="15dp"/>
+                    android:layout_margin="6dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|center_vertical"
+                        android:padding="12dp"
+
+                        android:src="@drawable/paint_palette" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/nadrawer_menu_tem_title_background"
+                        android:padding="8dp"
+                        android:text="Вигляд"
+                        android:textAlignment="viewStart"
+                        android:textSize="18sp" />
             </LinearLayout>
             <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:text="Про додаток"
                       android:layout_margin="15dp"
                       android:textSize="18sp"/>
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="horizontal"
 
-                          android:layout_margin="6dp">
-                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                           android:src="@drawable/mail"
-                           android:layout_gravity="center|center_vertical"
+            <LinearLayout
+                    android:id="@+id/mailItem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-                           android:padding="12dp"
-                />
-                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:text="Про додаток"
-                          android:textAlignment="viewStart"
-                          android:background="@drawable/nadrawer_menu_tem_title_background" android:padding="8dp"
-                          android:textSize="18sp" android:layout_marginLeft="15dp"/>
+                    android:layout_margin="6dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|center_vertical"
+                        android:padding="12dp"
+
+                        android:src="@drawable/mail" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:background="@drawable/nadrawer_menu_tem_title_background"
+                        android:padding="8dp"
+                        android:text="Про додаток"
+                        android:textAlignment="viewStart"
+                        android:textSize="18sp" />
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.navigation.NavigationView>
