--- a/app/src/main/res/drawable/main_list_item_background.xml
+++ b/app/src/main/res/drawable/main_list_item_background.xml
@@ -3,18 +3,17 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="#D3D7DD" />
+            <solid android:color="#f2f2f2" />
         </shape>
     </item>
 
-    <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
+    <item  android:left="-6dp">
         <shape>
             <solid android:color="@android:color/transparent" />
             <stroke
 
-
                     android:width="1dp"
-                    android:color="#ababb2" />
+                    android:color="#cecece"/>
         </shape>
     </item>
 
