--- a/app/src/main/res/layout/activity_list_main.xml
+++ b/app/src/main/res/layout/activity_list_main.xml
@@ -6,16 +6,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 android:orientation="vertical"
-android:background="#fefefe">
-    <EditText
-            android:id="@+id/search_edittext"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:clickable="true"
-
-            android:focusable="false"
-
-            />
+android:background="#f2f2f2">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:orientation="vertical"
+                  android:background="@color/colorPrimary">
+        <EditText
+                android:id="@+id/search_edittext"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="false"
+                android:background="@drawable/searchfieldback"
+                android:layout_margin="7dp"
+                android:padding="5dp"
+        />
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginLeft="10dp"
             android:id="@+id/main_list_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
