--- a/app/src/main/res/layout/activity_sura_details.xml
+++ b/app/src/main/res/layout/activity_sura_details.xml
@@ -7,14 +7,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".SuraDetails.SuraDetails">
-    <EditText
-            android:id="@+id/search_edittext_details"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:clickable="true"
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/colorPrimary">
+        <EditText
+                android:id="@+id/search_edittext_details"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="false"
+                android:background="@drawable/searchfieldback"
+                android:layout_margin="7dp"
+                android:padding="5dp"
+        />
+    </LinearLayout>
 
-            android:focusable="false"
-
-            />
     <TextView
             android:id="@+id/sura_details_suraname_english"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
