--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -5,13 +5,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/main_list_item_background"
-android:padding="23dp"
+android:padding="13dp"
+
 android:clickable="true">
     <TextView
             android:id="@+id/main_list_item_indexsura"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
-
-
+android:textColor="#575757"
+android:layout_marginLeft="15dp"
             android:layout_centerVertical="true"
 
 
@@ -20,9 +21,17 @@ android:clickable="true">
     <TextView
             android:id="@+id/main_list_item_namesura"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
-
-android:layout_marginLeft="40dp"
+android:textStyle="bold"
+android:layout_marginLeft="55dp"
             android:textSize="15sp" />
+    <TextView
+            android:id="@+id/main_list_item_ukrnamesura"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+
+            android:layout_marginLeft="55dp"
+            android:textColor="#808080"
+            android:textSize="15sp" android:layout_below="@id/main_list_item_namesura"
+    android:layout_marginTop="10dp"/>
     <ImageView
             android:id="@+id/main_list_item_download_icon_sura"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
