--- a/app/src/main/res/drawable/main_list_item_background.xml
+++ b/app/src/main/res/drawable/main_list_item_background.xml
@@ -7,11 +7,10 @@
         </shape>
     </item>
 
-    <item  android:left="-6dp">
-        <shape>
+    <item  >
+        <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent" />
             <stroke
-
                     android:width="1dp"
                     android:color="#cecece"/>
         </shape>
