--- a/app/src/main/res/layout/sura_details_item.xml
+++ b/app/src/main/res/layout/sura_details_item.xml
@@ -5,11 +5,13 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/main_list_item_background"
-android:clickable="true">
+android:clickable="true"
+>
 <RelativeLayout
         android:id="@+id/sura_details_item_context_menu_block"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@color/colorPrimary"
 android:padding="12dp">
     <ImageView
             android:id="@+id/sura_details_item_context_menu_bookmark"
@@ -31,12 +33,13 @@ android:padding="12dp">
     android:layout_marginLeft="30dp"/>
     <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:layout_margin="10dp"
     >
       <FrameLayout
               android:id="@+id/sura_details_item_aya_figure"
               android:layout_width="wrap_content" android:layout_height="wrap_content"
       android:background="@drawable/figure"
-      android:layout_margin="6dp">
+      >
 
           <TextView
                   android:id="@+id/sura_details_item_aya_number"
@@ -44,21 +47,32 @@ android:padding="12dp">
 
           android:text="130"
           android:layout_gravity="center"
-                  android:padding="12dp"
+                  android:padding="6dp"
                   android:textSize="12sp"
          />
       </FrameLayout>
-        <TextView
-                android:id="@+id/sura_details_item_aya_ukr"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/sura_details_item_aya_figure"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="22dp"/>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
+        android:layout_toRightOf="@+id/sura_details_item_aya_figure"
+                      android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp">
+            <TextView
+                    android:id="@+id/sura_details_item_aya_ukr"
+                    android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:text="ukr"
+                    android:textSize="18sp"
+                    />
+            <TextView
+                    android:text="arab"
+                    android:id="@+id/sura_details_item_aya_arabic"
+                    android:layout_width="match_parent" android:layout_height="wrap_content"
+android:paddingTop="10dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:paddingBottom="10dp"
+            />
+        </LinearLayout>
+
     </RelativeLayout>
 
-    <TextView
-            android:id="@+id/sura_details_item_aya_arabic"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
-    android:layout_gravity="right"/>
+
 </LinearLayout>
