--- a/app/src/main/res/layout/activity_global_search.xml
+++ b/app/src/main/res/layout/activity_global_search.xml
@@ -12,9 +12,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary">
-        <androidx.appcompat.widget.SearchView
-                android:id="@+id/foundsurassearchfield"
-                android:layout_width="match_parent" android:layout_height="wrap_content"/>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+
+            <androidx.appcompat.widget.SearchView
+                    android:id="@+id/foundsurassearchfield"
+                    android:layout_width="0dp" android:layout_height="wrap_content"
+                    android:background="@drawable/searchfieldback"
+            android:layout_weight=".90"/>
+            <TextView android:id="@+id/cancelsearch"
+                    android:layout_width="0dp" android:layout_height="wrap_content"
+                      android:text="Отмена"
+                      android:textColor="@android:color/white"
+                      android:textAlignment="center"
+                      android:layout_weight=".20"
+                      android:layout_gravity="center"
+                      android:clickable="true"
+            />
+
+        </LinearLayout>
+
     </androidx.appcompat.widget.Toolbar>
 <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/foundsuraslist"
