--- a/app/src/main/res/layout/activity_global_search.xml
+++ b/app/src/main/res/layout/activity_global_search.xml
@@ -18,10 +18,11 @@
                     android:id="@+id/foundsurassearchfield"
                     android:layout_width="0dp" android:layout_height="wrap_content"
                     android:background="@drawable/searchfieldback"
+                    app:queryHint="Поищук"
             android:layout_weight=".90"/>
             <TextView android:id="@+id/cancelsearch"
                     android:layout_width="0dp" android:layout_height="wrap_content"
-                      android:text="Отмена"
+                      android:text="Вiдмiна"
                       android:textColor="@android:color/white"
                       android:textAlignment="center"
                       android:layout_weight=".20"
