--- a/app/src/main/res/layout/app_bar_nav_drawer.xml
+++ b/app/src/main/res/layout/app_bar_nav_drawer.xml
@@ -1,40 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinatorlayout"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/coordinatorlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".NavDrawerActivity">
-<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
->
-    <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appbarlayout"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay"
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:orientation="vertical"
     >
-        <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbarlayout"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:layout_scrollFlags="enterAlways"
-        />
+                android:layout_height="wrap_content"
+                android:theme="@style/AppTheme.AppBarOverlay"
+        >
+            <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:layout_scrollFlags="enterAlways"
+                    app:popupTheme="@style/AppTheme.PopupOverlay"
+            >
+                <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+                    <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/actnbtn" android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            
+                            android:clickable="true" android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
+                    <TextView
+                            android:id="@+id/fragmenttitle"
+                            android:layout_width="wrap_content" android:layout_height="match_parent"
+                            android:layout_marginStart="15dp"
+                            android:layout_toEndOf="@id/actnbtn"
+                            android:text="text"
+                            android:gravity="center"
+                            android:textColor="@android:color/white"
+                            android:layout_centerVertical="true"
+                            android:textSize="15sp"/>
+                </RelativeLayout>
+
+            </androidx.appcompat.widget.Toolbar>
 
 
-    </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
 
+        <include layout="@layout/content_nav_drawer"/>
 
 
-
-    <include layout="@layout/content_nav_drawer"/>
-
-
-
-
-</LinearLayout>
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
