--- a/app/src/main/res/layout/settings_fragment_layout.xml
+++ b/app/src/main/res/layout/settings_fragment_layout.xml
@@ -26,7 +26,10 @@ android:paddingLeft="50px"
             android:id="@+id/settings_arabictext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+    />
+
+
 
 </RelativeLayout>
     <RelativeLayout
