--- a/app/src/main/res/layout/sura_details_item.xml
+++ b/app/src/main/res/layout/sura_details_item.xml
@@ -27,6 +27,14 @@ android:padding="12dp">
             android:layout_centerInParent="true"
    android:src="@drawable/favoriteicon"
   />
+    <ImageView
+            android:id="@+id/sura_details_item_context_menu_loved"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:clickable="true"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_share_black_24dp"
+     android:layout_alignParentEnd="true"
+    />
 </RelativeLayout>
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:id="@+id/suraheader"
